--- a/android/build.gradle
+++ b/android/build.gradle
@@ -54,6 +54,8 @@ repositories {
 }
 
 dependencies {
-    //noinspection GradleDynamicVersion
+  implementation fileTree(dir: 'libs', includes: ['*.aar'])
+
+  //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
 }
